<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/info_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/neucharegular"
        android:text="@string/user_information"
        android:textColor="@color/skyblue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/neucharegular"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_textView" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/skyblue"
        android:fontFamily="@font/neucharegular"
        android:hint="@string/your_id"
        android:importantForAutofill="no"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/name_textView"
        app:layout_constraintTop_toBottomOf="@+id/info_textView"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/gender_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/neucharegular"
        android:text="@string/gender"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_textView" />

    <EditText
        android:id="@+id/gender_editText"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/skyblue"
        android:fontFamily="@font/neucharegular"
        android:hint="@string/female_male"
        android:importantForAutofill="no"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/name_editText"
        app:layout_constraintTop_toBottomOf="@+id/name_editText" />

    <TextView
        android:id="@+id/height_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/neucharegular"
        android:text="@string/height"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_textView" />

    <EditText
        android:id="@+id/height_editText"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/skyblue"
        android:fontFamily="@font/neucharegular"
        android:hint="@string/except_in_cm"
        android:importantForAutofill="no"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/gender_editText"
        app:layout_constraintTop_toBottomOf="@+id/gender_editText" />

    <TextView
        android:id="@+id/weight_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/neucharegular"
        android:text="@string/weight"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_textView" />

    <EditText
        android:id="@+id/weight_editText"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/skyblue"
        android:fontFamily="@font/neucharegular"
        android:hint="@string/except_in_kg"
        android:importantForAutofill="no"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/height_editText"
        app:layout_constraintTop_toBottomOf="@+id/height_editText" />

    <TextView
        android:id="@+id/heat_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/neucharegular"
        android:text="@string/degree_of_heat"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_textView" />

    <TextView
        android:id="@+id/cold_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/neucharegular"
        android:text="@string/degree_of_cold"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/chk_weakCold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heat_textView" />

    <CheckBox
        android:id="@+id/chk_weakHeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:buttonTint="@color/skyblue"
        android:fontFamily="@font/neucharegular"
        android:minHeight="48dp"
        android:text="@string/weak_to_heat"
        android:textColor="#63636C"
        app:layout_constraintStart_toStartOf="@+id/weight_editText"
        app:layout_constraintTop_toBottomOf="@+id/weight_editText" />

    <CheckBox
        android:id="@+id/chk_ordinaryHeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:buttonTint="@color/skyblue"
        android:fontFamily="@font/neucharegular"
        android:minHeight="48dp"
        android:text="@string/ordinary"
        android:textColor="#63636C"
        app:layout_constraintStart_toStartOf="@+id/chk_weakHeat"
        app:layout_constraintTop_toBottomOf="@+id/chk_weakHeat" />

    <CheckBox
        android:id="@+id/chk_resistantHeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:buttonTint="@color/skyblue"
        android:fontFamily="@font/neucharegular"
        android:minHeight="48dp"
        android:text="@string/resistant_to_heat"
        android:textColor="#63636C"
        app:layout_constraintStart_toStartOf="@+id/chk_ordinaryHeat"
        app:layout_constraintTop_toBottomOf="@+id/chk_ordinaryHeat" />

    <CheckBox
        android:id="@+id/chk_weakCold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:buttonTint="@color/skyblue"
        android:fontFamily="@font/neucharegular"
        android:minHeight="48dp"
        android:text="@string/weak_to_cold"
        android:textColor="#63636C"
        app:layout_constraintStart_toStartOf="@+id/chk_resistantHeat"
        app:layout_constraintTop_toBottomOf="@+id/chk_resistantHeat"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/chk_ordinaryCold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:buttonTint="@color/skyblue"
        android:fontFamily="@font/neucharegular"
        android:minHeight="48dp"
        android:text="@string/ordinary"
        android:textColor="#63636C"
        app:layout_constraintStart_toStartOf="@+id/chk_weakCold"
        app:layout_constraintTop_toBottomOf="@+id/chk_weakCold" />

    <CheckBox
        android:id="@+id/chk_resistantCold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:buttonTint="@color/skyblue"
        android:fontFamily="@font/neucharegular"
        android:minHeight="48dp"
        android:text="@string/resistant_to_cold"
        android:textColor="#63636C"
        app:layout_constraintStart_toStartOf="@+id/chk_ordinaryCold"
        app:layout_constraintTop_toBottomOf="@+id/chk_ordinaryCold" />

    <Button
        android:id="@+id/btn_saveInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style"
        android:fontFamily="@font/neucharegular"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chk_resistantCold"
        app:layout_constraintVertical_bias="0.474" />

    <View
        android:id="@+id/view1"
        android:layout_width="335px"
        android:layout_height="4px"
        android:layout_marginStart="30dp"
        android:background="@color/skyblue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_textView" />

    <View
        android:id="@+id/view2"
        android:layout_width="335px"
        android:layout_height="4px"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:background="@color/skyblue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>