<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_styling"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:background="@drawable/btn_style1"
        android:fontFamily="@font/poppinsblack"
        android:text="@string/styling"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_closet"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_style1"
        android:fontFamily="@font/poppinsblack"
        android:text="@string/closet"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_styling" />

    <Button
        android:id="@+id/btn_info"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_style1"
        android:fontFamily="@font/poppinsblack"
        android:text="@string/user_info"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_closet" />

    <Button
        android:id="@+id/btn_manual"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_style1"
        android:fontFamily="@font/poppinsblack"
        android:text="@string/how_to_use"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_info" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_style1"
        android:fontFamily="@font/poppinsblack"
        android:text="@string/camera"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_manual" />

    <TextView
        android:id="@+id/title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:fontFamily="@font/poppinsblack"
        android:text="Smart Mirror"
        android:textColor="#000000"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="315dp"
        android:fontFamily="@font/poppinslight"
        android:text="FOR VIRTUAL FITTING"
        android:textColor="#000000"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <ImageView-->
<!--        android:id="@+id/imageView_icon1"-->
<!--        android:layout_width="91dp"-->
<!--        android:layout_height="76dp"-->
<!--        android:layout_marginTop="80dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:srcCompat="@drawable/icon1" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView_icon2"-->
<!--        android:layout_width="111dp"-->
<!--        android:layout_height="132dp"-->
<!--        android:layout_marginTop="130dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:srcCompat="@drawable/icon2" />-->

</androidx.constraintlayout.widget.ConstraintLayout>

